Intermediate stops search, overflow fixes
+ Added overflow fixes to the popups
+ Search for intermediate stops on a route
+ Added meta tags
= Change mapbox key to a more secure public key
- Remove scroll-bar in popups

--- a/dark-mode.css
+++ b/dark-mode.css
@@ -11,7 +11,7 @@ input[type="text"] {
 }
 
 input[type="checkbox"] {
-    accent-color: #ffffff;
+    accent-color: #fff;
 }
 
 .leaflet-popup-content-wrapper {
